--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,6 @@
           <version>2.22.1</version>
         </plugin>
         <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
         </plugin>
@@ -91,6 +87,21 @@
             <configuration>
               <mainClass>com.utfpr.projetoanalisedesistemas.ProjetoAnaliseDeSistemas</mainClass>
             </configuration>
+      </plugin>
+      <plugin>
+        <!-- Build an executable JAR -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>com.utfpr.projetoanalisedesistemas.ProjetoAnaliseDeSistemas</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
       </plugins>
     </pluginManagement>
